--- a/app/src/main/res/layout/item_issue_subsection.xml
+++ b/app/src/main/res/layout/item_issue_subsection.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:weightSum="1">
 
     <TextView
-        android:id="@+id/subsectionTitle"
+        android:id="@+id/subTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="18dp"
-        android:text="Specific Issues"
+        android:layout_alignEnd="@+id/readmore"
         android:layout_alignParentTop="true"
-        android:layout_alignEnd="@+id/readmore" />
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
+        android:text="Specific Issues" />
 
     <ListView
         android:id="@+id/issueList"
         android:layout_width="match_parent"
         android:layout_height="118dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/subTitle"
         android:layout_marginRight="15dp"
-        android:layout_weight="0.11"
-        android:layout_below="@+id/subsectionTitle"
-        android:layout_alignParentStart="true" />
+        android:layout_weight="0.11" />
 
     <TextView
         android:id="@+id/readmore"
@@ -29,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/issueList"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
         android:text="Read more!" />
 </RelativeLayout>
