--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
     android:id="@+id/ivProileImage"
-    android:layout_width="75dp"
-    android:layout_height="75dp"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
     android:layout_alignParentStart="true"
     android:layout_alignParentTop="true"
     app:srcCompat="@android:color/black" />
@@ -35,7 +35,12 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:layout_below="@+id/ivProileImage"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:ellipsize="end"
+        android:layout_margin="15dp"
+
+        android:maxLines="3"
+        android:minLines="1"/>
 
 
 </RelativeLayout>
