--- a/app/src/main/res/layout/activity_view_events.xml
+++ b/app/src/main/res/layout/activity_view_events.xml
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="8dp"
         tools:ignore="MissingConstraints">
-        <!--Setting the ITems for the toolbar-->
+        <!--Setting the Items for the toolbar-->
         <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:src="@mipmap/ic_launcher"
                 android:background="@android:color/transparent"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginStart="10dp"/>
         </android.support.v7.widget.LinearLayoutCompat>
 
     </android.support.v7.widget.Toolbar>
