--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -5,42 +5,66 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <!--<com.codepath.engage.ImageSizing-->
+        <!--android:id="@+id/ivProfileImage"-->
+        <!--android:layout_width="150dp"-->
+        <!--android:layout_height="150dp"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--app:srcCompat="@android:color/black"-->
+        <!--android:layout_margin="10dp"/>-->
+
     <ImageView
-    android:id="@+id/ivProileImage"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    app:srcCompat="@android:color/black" />
+        android:id="@+id/ivProfileImage"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        app:srcCompat="@android:color/black"
+        android:background="@drawable/border"/>
 
     <TextView
         android:id="@+id/tvEventName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/ivProileImage"
-        android:text="TextView" />
+        android:layout_alignStart="@+id/tvLocationInfo"
+        android:layout_alignTop="@+id/ivProfileImage"
+        android:text="@string/event_name"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_marginEnd="50dp"/>
 
     <TextView
         android:id="@+id/tvLocationInfo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvEventName"
-        android:layout_toEndOf="@+id/ivProileImage"
-        android:text="TextView" />
+        android:layout_toEndOf="@+id/ivProfileImage"
+        android:text="@string/location" />
 
     <TextView
         android:id="@+id/tvDescription"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_below="@+id/ivProileImage"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/ivProfileImage"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
         android:ellipsize="end"
-        android:layout_margin="15dp"
-
         android:maxLines="3"
-        android:minLines="1"/>
+        android:minLines="1"
+        android:layout_gravity="center"
+        android:text="@string/event_description"
+        android:layout_marginTop="5dp"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_margin="5dp"
+        android:layout_below="@+id/tvDescription" />
 
 
 </RelativeLayout>
