--- a/app/src/main/res/layout/item_issue_subsection.xml
+++ b/app/src/main/res/layout/item_issue_subsection.xml
@@ -11,9 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/readmore"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:text="Specific Issues" />
+        android:text="Specific Issues"
+        android:textSize="17dp" />
 
     <ListView
         android:id="@+id/issueList"
@@ -21,6 +22,7 @@
         android:layout_height="118dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/subTitle"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="15dp"
         android:layout_weight="0.11" />
 
