--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -28,14 +28,14 @@
 
     <TextView
         android:id="@+id/tvEventName"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/tvLocationInfo"
         android:layout_alignTop="@+id/ivProfileImage"
         android:text="@string/event_name"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:layout_marginEnd="50dp"/>
+        android:layout_marginEnd="20dp"/>
 
     <TextView
         android:id="@+id/tvLocationInfo"
