--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -39,11 +39,12 @@
 
     <TextView
         android:id="@+id/tvLocationInfo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/location"
         android:layout_below="@+id/tvEventName"
         android:layout_toEndOf="@+id/ivProfileImage"
-        android:text="@string/location" />
+        android:layout_marginRight="20dp"/>
 
     <TextView
         android:id="@+id/tvDescription"
@@ -65,6 +66,7 @@
         android:background="@android:color/darker_gray"
         android:layout_margin="5dp"
         android:layout_below="@+id/tvDescription" />
+
 
 
 </RelativeLayout>
