--- a/app/src/main/res/layout/activity_view_events.xml
+++ b/app/src/main/res/layout/activity_view_events.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/search"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    app:theme="@style/SearchViewTheme"
+                    android:theme="@style/SearchViewTheme"
                     tools:layout_editor_absoluteX="8dp"
                     tools:layout_editor_absoluteY="0dp" />
             </android.support.v7.widget.LinearLayoutCompat>
