--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,28 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codepath.engage.HomePage">
+    tools:openDrawer="start">
 
-    <TextView
-        android:id="@+id/hpIssues"
+    <!--<ListView-->
+        <!--android:id="@+id/navList"-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="left|start"-->
+        <!--android:background="#ffeeeeee" />-->
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        tools:context="com.codepath.engage.HomePage">
+
+        <include layout="@layout/navigational"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <!--<FrameLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:id="@+id/frame"/>-->
+        <!--<android.support.design.widget.AppBarLayout-->
+        <!--android:id="@+id/id_toolbar_container"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:fitsSystemWindows="true">-->
+
+        <!--<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--xmlns:tools="http://schemas.android.com/tools"-->
+        <!--android:id="@+id/toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:background="@android:color/white"-->
+        <!--android:contentInsetEnd="0dp"-->
+        <!--android:contentInsetLeft="0dp"-->
+        <!--android:contentInsetRight="0dp"-->
+        <!--android:contentInsetStart="0dp"-->
+        <!--app:contentInsetEnd="0dp"-->
+        <!--app:contentInsetLeft="0dp"-->
+        <!--app:contentInsetRight="0dp"-->
+        <!--app:contentInsetStart="0dp"-->
+        <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->
+        <!--tools:targetApi="lollipop"-->
+        <!--app:theme="@style/AppTheme"/>-->
+        <!--</android.support.design.widget.AppBarLayout>-->
+
+        <TextView
+            android:id="@+id/hpIssues"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="66dp"
+            android:text="Issues"
+            android:textAllCaps="true"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvIssues"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/hpIssues"
+            android:layout_marginTop="13dp" />
+
+    </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nvView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp"
-        android:text="Issues"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textAllCaps="true"/>
+        android:layout_gravity="end"
+        android:background="@android:color/white"
+        android:theme="@style/AppTheme"
+        app:itemTextColor="@android:color/black"
+        app:menu="@menu/profilebar"
+        />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvIssues"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/hpIssues" />
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
