--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,12 +6,11 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-    </style>
-    <style name="ViewEventsTheme"
-        parent="Theme.AppCompat.Light.NoActionBar">
+
     </style>
     <style name="SearchViewTheme" >
         <item name="colorControlActivated">@android:color/black</item>
         <item name="colorControlNormal">@android:color/holo_blue_dark</item>
     </style>
+    <style name="MyAppTheme" parent="@style/AppTheme" />
 </resources>
