--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,11 +6,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">#000000</item>
 
     </style>
     <style name="SearchViewTheme" >
         <item name="colorControlActivated">@android:color/black</item>
         <item name="colorControlNormal">@android:color/holo_blue_dark</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="queryBackground">@android:color/white</item>
+        <item name="android:textColorHint">@android:color/black</item>
     </style>
     <style name="MyAppTheme" parent="@style/AppTheme" />
 </resources>
