--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
-
-    <!--<com.codepath.engage.ImageSizing-->
-        <!--android:id="@+id/ivProfileImage"-->
-        <!--android:layout_width="150dp"-->
-        <!--android:layout_height="150dp"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--app:srcCompat="@android:color/black"-->
-        <!--android:layout_margin="10dp"/>-->
 
     <ImageView
         android:id="@+id/ivProfileImage"
@@ -34,6 +25,9 @@
         android:layout_alignTop="@+id/ivProfileImage"
         android:text="@string/event_name"
         android:textSize="22sp"
+        android:maxLines="3"
+        android:minLines="1"
+        android:ellipsize="end"
         android:textStyle="bold"
         android:layout_marginEnd="20dp"/>
 
@@ -42,7 +36,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/location"
-        android:layout_marginRight="20dp"
         android:layout_below="@+id/tvHost"
         android:layout_toEndOf="@+id/ivProfileImage" />
 
