--- a/app/src/main/res/layout/activity_view_events.xml
+++ b/app/src/main/res/layout/activity_view_events.xml
@@ -59,7 +59,8 @@
         android:layout_height="575dp"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="2dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteX="5dp"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
