--- a/app/src/main/res/layout/navigational.xml
+++ b/app/src/main/res/layout/navigational.xml
@@ -21,20 +21,24 @@
             android:actionViewClass="android.support.v7.widget.SearchView"
             android:theme="@style/SearchViewTheme"
             app:iconifiedByDefault="false"
-            app:queryHint="Search Events" />
+            app:queryHint="Search Events"
+            android:layout_weight="0.54" />
 
-    <ImageView
-        android:id="@+id/btnFilter"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_weight="1"
-        app:srcCompat="@color/colorPrimaryDark" />
+        <ImageView
+            android:id="@+id/btnFilter"
+            android:layout_width="20dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:visibility="visible"
+            app:srcCompat="@color/colorPrimaryDark" />
 
-    <ImageView
-        android:id="@+id/profileImage"
-        android:layout_width="45dp"
-        android:layout_height="50dp"
-        android:layout_weight="1"
-        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
+        <ImageView
+            android:id="@+id/profileImage"
+            android:layout_width="45dp"
+            android:layout_height="50dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
     </android.support.v7.widget.Toolbar>
 </LinearLayout>
