--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:openDrawer="start">
 
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -19,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-
         <TextView
             android:id="@+id/hpIssues"
             android:layout_width="wrap_content"
@@ -27,7 +25,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="66dp"
-            android:text="Issues"
+            android:text="@string/issues"
             android:textAllCaps="true"
             android:textSize="30sp"
             android:textStyle="bold" />
