--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -66,7 +66,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvEventName"
         android:layout_toEndOf="@+id/ivProfileImage"
-        android:text="@string/host" />
+        android:text="@string/host"
+        android:maxLines="1"
+        android:ellipsize="end"/>
 
 
 
