--- a/app/src/main/res/layout/navigational.xml
+++ b/app/src/main/res/layout/navigational.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/top_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -34,10 +34,10 @@
 
         <ImageView
             android:id="@+id/profileImage"
-            android:layout_width="45dp"
+            android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
+            android:layout_gravity="end"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
             app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
     </android.support.v7.widget.Toolbar>
