--- a/app/src/main/res/menu/profilebar.xml
+++ b/app/src/main/res/menu/profilebar.xml
@@ -4,17 +4,20 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
         <group android:id="@+id/drawerSectionOne" android:checkableBehavior="none">
             <item
-                android:id="@+id/nav_fourth_fragment"
+                android:id="@+id/profileTab"
                 android:title="My Profile" />
             <item
-                android:id="@+id/nav_first_fragment"
+                android:id="@+id/feedTab"
                 android:title="My Feed" />
             <item
-                android:id="@+id/nav_second_fragment"
+                android:id="@+id/interestedTab"
                 android:title="Interested Events" />
             <item
-                android:id="@+id/nav_third_fragment"
+                android:id="@+id/pastTabs"
                 android:title="Past Events" />
+            <item
+                android:id="@+id/createTab"
+                android:title="Create an Event" />
 
         </group>
 </menu>
