--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -45,16 +45,27 @@
         android:id="@+id/followers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/profileImage"
-        android:text="Followers" />
+        android:text="Followers"
+        android:layout_marginTop="33dp"
+        android:layout_below="@+id/Home"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/following"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/followers"
-        android:layout_below="@+id/myProfile"
-        android:text="Following" />
+        android:text="Following"
+        android:layout_alignBaseline="@+id/followers"
+        android:layout_alignBottom="@+id/followers"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="21dp" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:text="Follow"
+        android:layout_above="@+id/rvUpdates"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
