--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -86,6 +86,5 @@
         android:text="@string/map"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_margin="5dp"
-        android:onClick="openMap"/>
+        android:layout_margin="5dp" />
 </RelativeLayout>
