--- a/app/src/main/res/layout/event_details_activity.xml
+++ b/app/src/main/res/layout/event_details_activity.xml
@@ -16,25 +16,27 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_marginTop="5dp"
                 android:id="@+id/tvHost"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/tvEventName"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
                 android:text="@string/host"
                 android:textAppearance="@android:style/TextAppearance.Large"
-                android:textSize="20sp"
-                android:layout_below="@+id/tvEventName"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="10dp"/>
+                android:textSize="25sp" />
+
             <TextView
+                android:id="@+id/tvEventInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/event_info"
-                android:id="@+id/tvEventInfo"
                 android:layout_below="@+id/tvHost"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginStart="10dp"
-                android:textSize="14sp"/>
+                android:layout_marginTop="5dp"
+                android:text="@string/event_info"
+                android:textSize="18sp" />
             <TextView
                 android:id="@+id/tvEventDescription"
                 android:layout_width="wrap_content"
@@ -48,12 +50,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="serif"
                 android:text="@string/event_name"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:layout_marginStart="10dp"/>
+                android:textSize="36sp"
+                android:textStyle="bold" />
             <fragment
                 android:id="@+id/youtubeFragment"
                 android:layout_below="@+id/tvEventDescription"
