--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="drawerArrowStyle">@style/MaterialDrawer.DrawerArrowStyle</item>
     </style>
 
     <style name="SearchViewTheme" >
@@ -15,5 +19,12 @@
         <item name="queryBackground">@android:color/white</item>
         <item name="android:textColorHint">@android:color/black</item>
     </style>
+
     <style name="MyAppTheme" parent="@style/AppTheme" />
+
+    <style name="MaterialDrawer.DrawerArrowStyle"
+        parent="Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">false</item>
+        <item name="color">@android:color/white</item>
+    </style>
 </resources>
