finished drawer layout

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,6 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="drawerArrowStyle">@style/MaterialDrawer.DrawerArrowStyle</item>
     </style>
 
     <style name="SearchViewTheme" >
@@ -25,6 +24,7 @@
     <style name="MaterialDrawer.DrawerArrowStyle"
         parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">false</item>
-        <item name="color">@android:color/white</item>
+        <item name="color">@android:color/holo_red_dark</item>
     </style>
+
 </resources>
