--- a/app/src/main/res/layout/navigational.xml
+++ b/app/src/main/res/layout/navigational.xml
@@ -1,30 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/top_layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentStart="true"
-    android:layout_gravity="top|start">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_home"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:fitsSystemWindows="true"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         >
-
-    </android.support.v7.widget.Toolbar>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/toolbar">
+        android:layout_alignBottom="@+id/toolbar_home">
 
         <android.support.v7.widget.SearchView
             android:id="@+id/search"
@@ -36,8 +27,7 @@
             android:theme="@style/SearchViewTheme"
             app:iconifiedByDefault="false"
             app:queryHint="Search Events"
-            android:layout_alignBottom="@+id/profileImage"
-            android:layout_toEndOf="@+id/btnFilter"/>
+            android:layout_toStartOf="@+id/btnFilter"/>
 
         <ImageButton
             android:id="@+id/btnFilter"
@@ -47,16 +37,9 @@
             android:background="@android:color/transparent"
             app:srcCompat="@drawable/filter_image"
             android:scaleType="fitCenter"
-            android:layout_marginStart="5dp"/>
-
-        <ImageView
-            android:id="@+id/profileImage"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
+            android:layout_marginStart="5dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_gravity="end"
-            android:layout_toEndOf="@+id/search"
-            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
+            android:layout_alignParentTop="true"/>
+
     </RelativeLayout>
-</RelativeLayout>
+</android.support.v7.widget.Toolbar>
