Fixed coloring for messaging and background image for splas activity

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,7 +31,7 @@
         <item name="windowNoTitle">true</item>
     </style>
     <style name = "AppTheme.NoActionBar.Splash">
-        <item name ="android:windowBackground">@drawable/bg</item>
+        <item name="android:background">@drawable/logomark</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
