--- a/app/src/main/res/drawable/circle_accent_other.xml
+++ b/app/src/main/res/drawable/circle_accent_other.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <!--TODO sets the color of the bubble on the right side-->
+    <!--TODO changes the color of the left side bubble-->
     <size
         android:width="@dimen/user_icon_width"
         android:height="@dimen/user_icon_height"/>
-        <solid android:color="@color/black"/>
+    <solid android:color="@color/orange_600"/>
 
 
 </shape>
